# clog-lib

./: .gitignore  Cargo.toml  Changelog.md  releaserc.toml  rustfmt.toml
.circleci/: config.yml
.github/workflows/: audit.yml  check.yml
src/: clog.rs  error.rs  git.rs  lib.rs  link_style.rs  macros.rs  sectionmap.rs
src/fmt/: json_writer.rs  md_writer.rs  mod.rs
